tests/ui/query-system/no-query-in-printing-during-query-descr.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/no-query-in-printing-during-query-descr.rs:1:11
   |
LL | fn a() -> _ {
   |           ^ not allowed in type signatures

error: aborting due to previous error

For more information about this error, try `rustc --explain E0121`.
